# iluminacasa

./: .env  .gitignore  LICENSE  README.md  next.config.ts  package.json  pyproject.toml
backend/: iluminacasa.db  main.py  pyproject.toml
backend/api/v1/: api.py  product.py  users.py
backend/config/: config.py
backend/config/database/: config.py
backend/config/database/models/: product.py  user.py
backend/config/database/schemas/: products.py  user.py
backend/config/middleware/: config.py
backend/config/utils/: security.py
backend/services/: dependencies.py
backend/services/auth/: auth.py
backend/services/products/: products.py
iluminacasa/: package.json  (+1 more)
iluminacasa_backend/: .env  README.md  pyproject.toml  requirements.txt
iluminacasa_backend/app/: .env  database.db  iluminacasa.sql  main.py
iluminacasa_backend/app/api/v1/: api.py  auth.py  product.py  users.py
iluminacasa_backend/app/config/: settings.py
iluminacasa_backend/app/config/database/: database.py
iluminacasa_backend/app/config/handlers/: config.py
iluminacasa_backend/app/config/middleware/: config.py
iluminacasa_backend/app/core/: middleware.py
iluminacasa_backend/app/core/config/: settings.py
iluminacasa_backend/app/core/database/: database.py
iluminacasa_backend/app/models/: products.py
iluminacasa_backend/app/schemas/: auth.py  products.py  token.py  user.py
iluminacasa_backend/app/services/: dependencies.py  dummyjson.py
iluminacasa_backend/app/services/auth/: auth.py  auth_service.py  security.py
iluminacasa_backend/app/services/products/: dummyjson.py
(+40 files in other folders)
