[project]
name = "iluminacasa-backend"
version = "0.1.0"
description = "IluminaCasa, uma loja online para a venda de móveis e utensílios em geral"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "mysqlclient>=2.2.7",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
